[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/menus/pages/mods/mod_info_container.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/actual/base/font_menus.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/actual/base/font_22.tres" type="DynamicFont" id=3]
[ext_resource path="res://resources/fonts/actual/base/font_smallest_text.tres" type="DynamicFont" id=4]

[node name="ModInfoContainer" type="PanelContainer"]
margin_left = 872.0
margin_right = 1720.0
margin_bottom = 500.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 841.0
margin_bottom = 493.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 819.0
margin_bottom = 471.0
custom_constants/separation = 15

[node name="ModName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 804.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 2 )
text = "MOD_NAME"
clip_text = true

[node name="ModVersion" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 60.0
margin_right = 804.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "MOD_VERSION"
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 804.0
margin_bottom = 449.0
rect_min_size = Vector2( 0, 350 )
scroll_horizontal_enabled = false

[node name="ModDescription" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 804.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "MOD_DESCRIPTION"
text = "MOD_DESCRIPTION"
fit_content_height = true
